Tutorial-Start_to_Finish-GiRaFFE_HO-1D_tests_oldBCs: make it run with latest NRPy+

--- a/Tutorial-Start_to_Finish-GiRaFFE_HO-1D_tests_oldBCs.ipynb
+++ b/Tutorial-Start_to_Finish-GiRaFFE_HO-1D_tests_oldBCs.ipynb
@@ -133,31 +133,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::f0_of_xx0\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::f1_of_xx1\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::f0_of_xx0__D0\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::f0_of_xx0__DD00\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::f0_of_xx0__DDD000\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::f1_of_xx1__D1\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::f1_of_xx1__DD11\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::f1_of_xx1__DDD111\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::M_SQRT1_2\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::xmin\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::xmax\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::ymin\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::ymax\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::zmin\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::zmax\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO_1D::M_PI\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import GiRaFFEfood_HO.GiRaFFEfood_HO_1D_tests as gf1D\n",
     "gf1D.GiRaFFEfood_HO_1D_tests()\n",
@@ -227,31 +203,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::f0_of_xx0\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::f1_of_xx1\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::f0_of_xx0__D0\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::f0_of_xx0__DD00\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::f0_of_xx0__DDD000\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::f1_of_xx1__D1\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::f1_of_xx1__DD11\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::f1_of_xx1__DDD111\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::M_SQRT1_2\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::xmin\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::xmax\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::ymin\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::ymax\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::zmin\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::zmax\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO::M_PI\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 2: Create the C code output kernel.\n",
     "gri.glb_gridfcs_list = []\n",
@@ -294,8 +246,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter GiRaFFE_NRPy::M_PI\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter smallbPoynET::M_PI\n",
       "Generating C code for GiRaFFE RHSs in Cartesian coordinates.\n"
      ]
     }
@@ -1093,7 +1043,7 @@
     "        \n",
     "        // Now rerun the same output code we used in the main simulation. \n",
     "        printf(\"Writing EXACT output...\\n\");\n",
-    "        sprintf(filename,\"out%d-%08d_exact.txt\",Nxx[0],n);\n",
+    "        sprintf(filename,\"oldbc_out%d-%08d_exact.txt\",Nxx[0],n);\n",
     "        FILE *out2D_exact = fopen(filename, \"w\");\n",
     "        //LOOP_REGION(NGHOSTS,Nxx_plus_2NGHOSTS[0]-NGHOSTS, NGHOSTS,Nxx_plus_2NGHOSTS[1]-NGHOSTS, NGHOSTS,Nxx_plus_2NGHOSTS[2]-NGHOSTS) {\n",
     "        LOOP_REGION(0,Nxx_plus_2NGHOSTS[0], Nxx_plus_2NGHOSTS[1]/2,Nxx_plus_2NGHOSTS[1]/2+1,Nxx_plus_2NGHOSTS[2]/2,Nxx_plus_2NGHOSTS[2]/2+1) {\n",
@@ -1691,23 +1641,18 @@
       "Now compiling, should take ~2 seconds...\n",
       "\n",
       "Compiling executable...\n",
-      "Executing `gcc -Ofast -fopenmp -march=native GiRaFFE_standalone/GiRaFFE_standalone.c -o GiRaFFE_standalone_1D -lm`...\n",
-      "Finished executing in 1.62021899223 seconds.\n",
+      "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops GiRaFFE_standalone/GiRaFFE_standalone.c -o GiRaFFE_standalone_1D -lm`...\n",
+      "Finished executing in 1.61934399605 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 1.63462996483 seconds.\n",
+      "Finished in 1.63118100166 seconds.\n",
       "\n",
       "\n",
       "Now running at low resolution. Should take ~20 seconds...\n",
       "\n",
       "Executing `taskset -c 0,1,2,3 ./GiRaFFE_standalone_1D 1280 32 32 0.5`...\n",
-      "\u001b[2KIt: 32 t=0.10 | 100.0%; ETA 0 s | t/h 17.85 | gp/s 8.32e+06\n",
-      "Finished executing in 20.5270140171 seconds.\n",
-      "Finished in 20.5432918072 seconds.\n",
-      "\n",
-      "\n",
-      "Now running at medium resolution. Should take ~300 seconds...\n",
-      "\n",
-      "Finished in 8.20159912109e-05 seconds.\n",
+      "\u001b[2KIt: 32 t=0.10 | 100.0%; ETA 0 s | t/h 12.42 | gp/s 5.79e+06\n",
+      "Finished executing in 29.4349310398 seconds.\n",
+      "Finished in 29.4546689987 seconds.\n",
       "\n",
       "\n"
      ]
@@ -1735,11 +1680,11 @@
     "end = time.time()\n",
     "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")\n",
     "\n",
-    "print(\"Now running at medium resolution. Should take ~300 seconds...\\n\")\n",
-    "start = time.time()\n",
-    "#cmd.Execute(\"GiRaFFE_standalone_1D\", \"2560 8 8 0.5\")\n",
-    "end = time.time()\n",
-    "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")"
+    "# print(\"Now running at medium resolution. Should take ~300 seconds...\\n\")\n",
+    "# start = time.time()\n",
+    "# cmd.Execute(\"GiRaFFE_standalone_1D\", \"2560 8 8 0.5\")\n",
+    "# end = time.time()\n",
+    "# print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")"
    ]
   },
   {
@@ -1757,27 +1702,22 @@
    },
    "outputs": [
     {
-     "ename": "IOError",
-     "evalue": "out1280-00000300_numer.txt not found.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIOError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-61edaf636543>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mData_numer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloadtxt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"out1280-00000300_numer.txt\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;31m#Data_num_2 = np.loadtxt(\"out2560-00000600_numer.txt\")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mData_exact\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloadtxt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"out1280-00000300_exact.txt\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/penelson/juppp/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mloadtxt\u001b[0;34m(fname, dtype, comments, delimiter, converters, skiprows, usecols, unpack, ndmin, encoding)\u001b[0m\n\u001b[1;32m    924\u001b[0m             \u001b[0mfname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    925\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0m_is_string_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 926\u001b[0;31m             \u001b[0mfh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_datasource\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mencoding\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    927\u001b[0m             \u001b[0mfencoding\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfh\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'encoding'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'latin1'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    928\u001b[0m             \u001b[0mfh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0miter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfh\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/penelson/juppp/site-packages/numpy/lib/_datasource.py\u001b[0m in \u001b[0;36mopen\u001b[0;34m(path, mode, destpath, encoding, newline)\u001b[0m\n\u001b[1;32m    260\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    261\u001b[0m     \u001b[0mds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDataSource\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdestpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 262\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mencoding\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewline\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnewline\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    263\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    264\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/penelson/juppp/site-packages/numpy/lib/_datasource.py\u001b[0m in \u001b[0;36mopen\u001b[0;34m(self, path, mode, encoding, newline)\u001b[0m\n\u001b[1;32m    616\u001b[0m                                       encoding=encoding, newline=newline)\n\u001b[1;32m    617\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 618\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mIOError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"%s not found.\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    619\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    620\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIOError\u001b[0m: out1280-00000300_numer.txt not found."
-     ]
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 1 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "Data_numer = np.loadtxt(\"out1280-00000300_numer.txt\")\n",
+    "Data_numer = np.loadtxt(\"oldbc_out1280-00000032_numer.txt\")\n",
     "#Data_num_2 = np.loadtxt(\"out2560-00000600_numer.txt\")\n",
-    "Data_exact = np.loadtxt(\"out1280-00000300_exact.txt\")\n",
+    "Data_exact = np.loadtxt(\"oldbc_out1280-00000032_exact.txt\")\n",
     "#Data_exa_2 = np.loadtxt(\"out2560-00000600_exact.txt\")\n",
     "\n",
     "predicted_order = 4.0\n",
@@ -1804,9 +1744,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[2KProcessing file oldbc_out1280-00000032_exact.txt\r"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.pyplot import savefig\n",
@@ -1817,7 +1765,7 @@
     "import sys\n",
     "from matplotlib import animation\n",
     "\n",
-    "globby = glob.glob('out1280-00*.txt')\n",
+    "globby = glob.glob('oldbc_out1280-00*.txt')\n",
     "file_list = []\n",
     "for x in sorted(globby):\n",
     "    file_list.append(x)\n",
@@ -1848,7 +1796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1875,22 +1823,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<video width=\"480\" height=\"360\" controls>\n",
+       "  <source src=\"GiRaFFE_HO-1D_tests.mp4\" type=\"video/mp4\">\n",
+       "</video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%HTML\n",
     "<video width=\"480\" height=\"360\" controls>\n",
     "  <source src=\"GiRaFFE_HO-1D_tests.mp4\" type=\"video/mp4\">\n",
     "</video>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
