Updated formatting of multiple NRPy+ modules

--- a/Tutorial-GiRaFFE_Higher_Order_v2.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order_v2.ipynb
@@ -130,7 +130,7 @@
     "thismodule = \"GiRaFFE_NRPy\"\n",
     "\n",
     "# M_PI will allow the C code to substitute the correct value\n",
-    "M_PI = par.Cparameters(\"REAL\",thismodule,\"M_PI\")\n",
+    "M_PI = par.Cparameters(\"#define\",thismodule,\"M_PI\",\"\")\n",
     "# ADMBase defines the 4-metric in terms of the 3+1 spacetime metric quantities gamma_{ij}, beta^i, and alpha\n",
     "gammaDD = ixp.register_gridfunctions_for_single_rank2(\"AUX\",\"gammaDD\", \"sym01\",DIM=3)\n",
     "betaU   = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"betaU\",DIM=3)\n",
@@ -528,7 +528,7 @@
    "source": [
     "# Step 4.0: Construct the evolution equations for A_i and sqrt(gamma)Phi\n",
     "# Step 4.0.a: Construct some useful auxiliary gridfunctions for the other evolution equations\n",
-    "xi = par.Cparameters(\"REAL\",thismodule,\"xi\") # The damping factor\n",
+    "xi = par.Cparameters(\"REAL\",thismodule,\"xi\",0.1) # The damping factor\n",
     "\n",
     "# Define sqrt(gamma)Phi as psi6Phi\n",
     "psi6Phi = gri.register_gridfunctions(\"EVOL\",\"psi6Phi\")\n",
@@ -631,14 +631,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vvv Ignore the minor warning below. vvv\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFE_NRPy::M_PI\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::GAMMA_SPEED_LIMIT\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::u0\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::M_PI\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFE_NRPy::xi\n",
-      "^^^ Ignore the minor warning above. ^^^\n",
-      "\n",
       "Consistency check between GiRaFFE_Higher_Order tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
       "AevolParen - gho.AevolParen = 0\n",
       "psi6Phi_rhs - gho.psi6Phi_rhs = 0\n",
@@ -668,12 +660,8 @@
     "#   twice will spawn an error.\n",
     "gri.glb_gridfcs_list = []\n",
     "\n",
-    "print(\"vvv Ignore the minor warning below. vvv\")\n",
-    "\n",
     "import GiRaFFE_HO.GiRaFFE_Higher_Order_v2 as gho\n",
     "gho.GiRaFFE_Higher_Order_v2()\n",
-    "\n",
-    "print(\"^^^ Ignore the minor warning above. ^^^\\n\")\n",
     "\n",
     "print(\"Consistency check between GiRaFFE_Higher_Order tutorial and NRPy+ module: ALL SHOULD BE ZERO.\")\n",
     "\n",
@@ -685,7 +673,7 @@
     "    print(\"A_rhsD[\"+str(i)+\"] - gho.A_rhsD[\"+str(i)+\"] = \" + str(A_rhsD[i] - gho.A_rhsD[i]))\n",
     "    for j in range(DIM):\n",
     "        print(\"SevolParenUD[\"+str(i)+\"][\"+str(j)+\"] - gho.SevolParenUD[\"+str(i)+\"][\"+str(i)+\"] = \"\\\n",
-    "              + str(SevolParenUD[i][j] - gho.SevolParenUD[i][j]))\n"
+    "              + str(SevolParenUD[i][j] - gho.SevolParenUD[i][j]))"
    ]
   },
   {
@@ -711,7 +699,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GiRaFFE_Higher_Order_v2.ipynb to latex\n",
-      "[NbConvertApp] Writing 73620 bytes to Tutorial-GiRaFFE_Higher_Order_v2.tex\n",
+      "[NbConvertApp] Writing 76275 bytes to Tutorial-GiRaFFE_Higher_Order_v2.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
