--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -140,7 +140,7 @@
     "thismodule = \"GiRaFFE_NRPy\"\n",
     "\n",
     "# M_PI will allow the C code to substitute the correct value\n",
-    "M_PI = par.Cparameters(\"REAL\",thismodule,\"M_PI\")\n",
+    "M_PI = par.Cparameters(\"#define\",thismodule,\"M_PI\",\"\")\n",
     "# ADMBase defines the 4-metric in terms of the 3+1 spacetime metric quantities gamma_{ij}, beta^i, and alpha\n",
     "gammaDD = ixp.register_gridfunctions_for_single_rank2(\"AUX\",\"gammaDD\", \"sym01\",DIM=3)\n",
     "betaU   = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"betaU\",DIM=3)\n",
@@ -1097,7 +1097,7 @@
    "source": [
     "# Step 4.0: Construct the evolution equations for A_i and sqrt(gamma)Phi\n",
     "# Step 4.0.a: Construct some useful auxiliary gridfunctions for the other evolution equations\n",
-    "xi = par.Cparameters(\"REAL\",thismodule,\"xi\") # The damping factor\n",
+    "xi = par.Cparameters(\"REAL\",thismodule,\"xi\",0.1) # The damping factor\n",
     "\n",
     "# Define sqrt(gamma)Phi as psi6Phi\n",
     "psi6Phi = gri.register_gridfunctions(\"EVOL\",\"psi6Phi\")\n",
@@ -1186,14 +1186,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vvv Ignore the minor warning below. vvv\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFE_NRPy::M_PI\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::GAMMA_SPEED_LIMIT\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::u0\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter smallbPoynET::M_PI\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFE_NRPy::xi\n",
-      "^^^ Ignore the minor warning above. ^^^\n",
-      "\n",
       "Consistency check between GiRaFFE_Higher_Order tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
       "u0alpha - gho.u0alpha = 0\n",
       "alpsqrtgam - gho.alpsqrtgam = 0\n",
@@ -1222,12 +1214,8 @@
     "#   twice will spawn an error.\n",
     "gri.glb_gridfcs_list = []\n",
     "\n",
-    "print(\"vvv Ignore the minor warning below. vvv\")\n",
-    "\n",
     "import GiRaFFE_HO.GiRaFFE_Higher_Order as gho\n",
     "gho.GiRaFFE_Higher_Order()\n",
-    "\n",
-    "print(\"^^^ Ignore the minor warning above. ^^^\\n\")\n",
     "\n",
     "print(\"Consistency check between GiRaFFE_Higher_Order tutorial and NRPy+ module: ALL SHOULD BE ZERO.\")\n",
     "\n",
@@ -1240,7 +1228,7 @@
     "    print(\"uD[\"+str(i)+\"] - gho.uD[\"+str(i)+\"] = \" + str(uD[i] - gho.uD[i]))\n",
     "    print(\"PevolParenU[\"+str(i)+\"] - gho.PevolParenU[\"+str(i)+\"] = \" + str(PevolParenU[i] - gho.PevolParenU[i]))\n",
     "    print(\"Stilde_rhsD[\"+str(i)+\"] - gho.Stilde_rhsD[\"+str(i)+\"] = \" + str(Stilde_rhsD[i] - gho.Stilde_rhsD[i]))\n",
-    "    print(\"A_rhsD[\"+str(i)+\"] - gho.A_rhsD[\"+str(i)+\"] = \" + str(A_rhsD[i] - gho.A_rhsD[i]))\n"
+    "    print(\"A_rhsD[\"+str(i)+\"] - gho.A_rhsD[\"+str(i)+\"] = \" + str(A_rhsD[i] - gho.A_rhsD[i]))"
    ]
   },
   {
@@ -1258,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1266,7 +1254,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GiRaFFE_Higher_Order.ipynb to latex\n",
-      "[NbConvertApp] Writing 122840 bytes to Tutorial-GiRaFFE_Higher_Order.tex\n",
+      "[NbConvertApp] Writing 121855 bytes to Tutorial-GiRaFFE_Higher_Order.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
