--- a/Tutorial-GiRaFFEfood_HO_1D_tests.ipynb
+++ b/Tutorial-GiRaFFEfood_HO_1D_tests.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# $\\texttt{GiRaFFEfood}$: Initial data for $\\texttt{GiRaFFE}$\n",
+    "# 1D Alfven Wave `GiRaFFEfood` Initial Data for `GiRaFFE`\n",
     "\n",
-    "## This module provides another initial data option for $\\texttt{GiRaFFE}$, drawn from [this paper](https://arxiv.org/abs/1310.3274) .\n",
+    "## This module provides another initial data option for `GiRaFFE`, drawn from [this paper](https://arxiv.org/abs/1310.3274) .\n",
     "\n",
     "**Module Status:** <font color='orange'><b> Self-Validated </b></font>\n",
     "\n",
@@ -248,7 +248,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sin(5.0*M_PI*xx0/sqrt(-mu_AW**2 + 1)) + 1.0\n"
+      "sin(5.0*M_PI*xx0/sqrt(1 - mu_AW**2)) + 1.0\n"
      ]
     }
    ],
@@ -450,7 +450,7 @@
     "# Step 5: Code Validation against `GiRaFFEfood_HO/GiRaFFEfood_HO_1D_tests` NRPy+ module \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation}$$\n",
     "\n",
-    "Here, as a code validation check, we verify agreement in the SymPy expressions for the $\\texttt{GiRaFFE}$ Aligned Rotator initial data equations  we intend to use between\n",
+    "Here, as a code validation check, we verify agreement in the SymPy expressions for the `GiRaFFE` Aligned Rotator initial data equations  we intend to use between\n",
     "1. this tutorial and \n",
     "2. the NRPy+ [`GiRaFFEfood_HO/GiRaFFEfood_HO_1D_tests.py`](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO_1D_tests.py) module.\n",
     "\n"
@@ -465,19 +465,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vvv Ignore the minor warnings below. vvv\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_SQRT1_2\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmin\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmax\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ymin\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ymax\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::zmin\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::zmax\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO_1D::mu_AW\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO_1D::M_PI\n",
-      "^^^ Ignore the minor warnings above. ^^^\n",
-      "\n",
       "Consistency check between GiRaFFEfood_HO tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
       "ValenciavleftU[0] - gfho.ValenciavleftU[0] = 0\n",
       "AleftD[0] - gfho.AleftD[0] = 0\n",
@@ -505,12 +492,8 @@
     "#   twice will spawn an error.\n",
     "gri.glb_gridfcs_list = []\n",
     "\n",
-    "print(\"vvv Ignore the minor warnings below. vvv\")\n",
-    "\n",
     "import GiRaFFEfood_HO.GiRaFFEfood_HO_1D_tests as gfho\n",
     "gfho.GiRaFFEfood_HO_1D_tests()\n",
-    "\n",
-    "print(\"^^^ Ignore the minor warnings above. ^^^\\n\")\n",
     "\n",
     "print(\"Consistency check between GiRaFFEfood_HO tutorial and NRPy+ module: ALL SHOULD BE ZERO.\")\n",
     "\n",
@@ -521,7 +504,7 @@
     "    print(\"ValenciavcenterU[\"+str(i)+\"] - gfho.ValenciavcenterU[\"+str(i)+\"] = \" + str(ValenciavcenterU[i] - gfho.ValenciavcenterU[i]))\n",
     "    print(\"AcenterD[\"+str(i)+\"] - gfho.AcenterD[\"+str(i)+\"] = \" + str(AcenterD[i] - gfho.AcenterD[i]))\n",
     "    print(\"ValenciavrightU[\"+str(i)+\"] - gfho.ValenciavrightU[\"+str(i)+\"] = \" + str(ValenciavrightU[i] - gfho.ValenciavrightU[i]))\n",
-    "    print(\"ArightD[\"+str(i)+\"] - gfho.ArightD[\"+str(i)+\"] = \" + str(ArightD[i] - gfho.ArightD[i]))\n"
+    "    print(\"ArightD[\"+str(i)+\"] - gfho.ArightD[\"+str(i)+\"] = \" + str(ArightD[i] - gfho.ArightD[i]))"
    ]
   },
   {
@@ -547,7 +530,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GiRaFFEfood_HO_1D_tests.ipynb to latex\n",
-      "[NbConvertApp] Writing 50858 bytes to Tutorial-GiRaFFEfood_HO_1D_tests.tex\n",
+      "[NbConvertApp] Writing 54828 bytes to Tutorial-GiRaFFEfood_HO_1D_tests.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
