--- a/Tutorial-GiRaFFEfood_HO_Aligned_Rotator.ipynb
+++ b/Tutorial-GiRaFFEfood_HO_Aligned_Rotator.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# $\\texttt{GiRaFFEfood}$: Initial data for $\\texttt{GiRaFFE}$ Aligned Rotator\n",
+    "# `GiRaFFEfood`: Initial data for `GiRaFFE` Aligned Rotator\n",
     "\n",
     "## Author: Zach Etienne & Patrick Nelson\n",
     "### Formatting improvements courtesy Brandon Clark\n",
@@ -39,7 +39,7 @@
     "1. [Step 2](#set_aphi): Set the vector $A_{\\phi}$ Spherical coordinates \n",
     "1. [Step 3](#jacobian): Use the Jacobian matrix to transform the vectors to Cartesian coordinates\n",
     "1. [Step 4](#vi): Calculate $v^i$\n",
-    "1. [Step 5](#code_validation): `Code Validation against GiRaFFEfood_HO.GiRaFFEfood_HO_Aligned_Rotator` NRPy+ Module\n",
+    "1. [Step 5](#code_validation): Code Validation against `GiRaFFEfood_HO.GiRaFFEfood_HO_Aligned_Rotator` NRPy+ Module\n",
     "1. [Step 6](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF file"
    ]
   },
@@ -238,27 +238,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vvv Ignore the minor warnings below. vvv\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::M_SQRT1_2\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::xmin\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::xmax\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::ymin\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::ymax\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::zmin\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::zmax\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO_Aligned_Rotator::B_p_aligned_rotator\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO_Aligned_Rotator::R_NS_aligned_rotator\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO_Aligned_Rotator::Omega_aligned_rotator\n",
-      "^^^ Ignore the minor warnings above. ^^^\n",
-      "\n",
       "Consistency check between GiRaFFEfood_HO tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
-      "ValenciavU[0] - gfho.ValenciavU[0] = 0\n",
-      "AD[0] - gfho.AD[0] = 0\n",
-      "ValenciavU[1] - gfho.ValenciavU[1] = 0\n",
-      "AD[1] - gfho.AD[1] = 0\n",
-      "ValenciavU[2] - gfho.ValenciavU[2] = 0\n",
-      "AD[2] - gfho.AD[2] = 0\n"
+      "ValenciavU[0] - gfho.ValenciavU[0] = \t0\n",
+      "AD[0] - gfho.AD[0] = \t\t\t0\n",
+      "ValenciavU[1] - gfho.ValenciavU[1] = \t0\n",
+      "AD[1] - gfho.AD[1] = \t\t\t0\n",
+      "ValenciavU[2] - gfho.ValenciavU[2] = \t0\n",
+      "AD[2] - gfho.AD[2] = \t\t\t0\n"
      ]
     }
    ],
@@ -267,19 +253,15 @@
     "#   twice will spawn an error.\n",
     "gri.glb_gridfcs_list = []\n",
     "\n",
-    "print(\"vvv Ignore the minor warnings below. vvv\")\n",
-    "\n",
     "import GiRaFFEfood_HO.GiRaFFEfood_HO_Aligned_Rotator as gfho\n",
     "gfho.GiRaFFEfood_HO_Aligned_Rotator()\n",
-    "\n",
-    "print(\"^^^ Ignore the minor warnings above. ^^^\\n\")\n",
     "\n",
     "print(\"Consistency check between GiRaFFEfood_HO tutorial and NRPy+ module: ALL SHOULD BE ZERO.\")\n",
     "\n",
     "for i in range(DIM):\n",
     "\n",
-    "    print(\"ValenciavU[\"+str(i)+\"] - gfho.ValenciavU[\"+str(i)+\"] = \" + str(ValenciavU[i] - gfho.ValenciavU[i]))\n",
-    "    print(\"AD[\"+str(i)+\"] - gfho.AD[\"+str(i)+\"] = \" + str(AD[i] - gfho.AD[i]))\n"
+    "    print(\"ValenciavU[\"+str(i)+\"] - gfho.ValenciavU[\"+str(i)+\"] = \\t\" + str(ValenciavU[i] - gfho.ValenciavU[i]))\n",
+    "    print(\"AD[\"+str(i)+\"] - gfho.AD[\"+str(i)+\"] = \\t\\t\\t\" + str(AD[i] - gfho.AD[i]))"
    ]
   },
   {
@@ -305,7 +287,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GiRaFFEfood_HO_Aligned_Rotator.ipynb to latex\n",
-      "[NbConvertApp] Writing 43773 bytes to Tutorial-GiRaFFEfood_HO_Aligned_Rotator.tex\n",
+      "[NbConvertApp] Writing 41172 bytes to Tutorial-GiRaFFEfood_HO_Aligned_Rotator.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
