--- a/Tutorial-GiRaFFEfood_HO_Exact_Wald.ipynb
+++ b/Tutorial-GiRaFFEfood_HO_Exact_Wald.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# $\\texttt{GiRaFFEfood}$: Initial data for $\\texttt{GiRaFFE}$\n",
+    "# Exact Wald `GiRaFFEfood` Initial Data for `GiRaFFE`\n",
     "\n",
     "## Author: Zach Etienne & Patrick Nelson\n",
     "### Formatting improvements courtesy Brandon Clark\n",
@@ -18,12 +18,12 @@
     "**Validation Notes:** This tutorial module has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation1). **Additional validation tests may have been performed, but are as yet, undocumented. (TODO)**\n",
     "\n",
     "## Introduction: \n",
-    "With the $\\texttt{GiRaFFE}$ evolution thorn constructed, we now need to \"feed\" our giraffe with initial data to evolve. While there are several different choices of initial data we can use here, for the moment, we will only be implementing the \"Exact Wald\" initial data, given by Table 3 in [the original paper](https://arxiv.org/pdf/1704.00599.pdf):\n",
+    "With the `GiRaFFE` evolution thorn constructed, we now need to \"feed\" our giraffe with initial data to evolve. While there are several different choices of initial data we can use here, for the moment, we will only be implementing the \"Exact Wald\" initial data, given by Table 3 in [the original paper](https://arxiv.org/pdf/1704.00599.pdf):\n",
     "\\begin{align}\n",
     "A_{\\phi} &= \\frac{C_0}{2} r^2 \\sin^2 \\theta \\\\\n",
     "E_{\\phi} &= 2 M C_0 \\left( 1+ \\frac {2M}{r} \\right)^{-1/2} \\sin^2 \\theta \\\\\n",
     "\\end{align}\n",
-    "(the unspecified components are set to 0). Here, $C_0$ is a constant that we will set to $1$ in our simulations. Now, to use this initial data scheme, we need to transform the above into the quantities actually tracked by $\\texttt{GiRaFFE}$ and HydroBase: $A_i$, $B^i$, $\\tilde{S}_i$, $v^i$, and $\\Phi$. Of these quantities, $\\texttt{GiRaFFEfood}$ will only set $A_i$, $v^i$, and $\\Phi=0$, then call a separate function to calculate  $\\tilde{S}_i$; $\\texttt{GiRaFFE}$ itself will call a function to set $B^i$ before the time-evolution begins. This can be done with eqs. 16 and 18, here given in that same order:\n",
+    "(the unspecified components are set to 0). Here, $C_0$ is a constant that we will set to $1$ in our simulations. Now, to use this initial data scheme, we need to transform the above into the quantities actually tracked by `GiRaFFE` and HydroBase: $A_i$, $B^i$, $\\tilde{S}_i$, $v^i$, and $\\Phi$. Of these quantities, $\\texttt{GiRaFFEfood}$ will only set $A_i$, $v^i$, and $\\Phi=0$, then call a separate function to calculate  $\\tilde{S}_i$; `GiRaFFE` itself will call a function to set $B^i$ before the time-evolution begins. This can be done with eqs. 16 and 18, here given in that same order:\n",
     "\\begin{align}\n",
     "v^i &= \\alpha \\frac{\\epsilon^{ijk} E_j B_k}{B^2} -\\beta^i \\\\\n",
     "B^i &= \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_j A_k \\\\\n",
@@ -235,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now build the initial velocity using equation 152 in [this paper,](https://arxiv.org/pdf/1310.3274v2.pdf) cited in the original $\\texttt{GiRaFFE}$ code: $$ v^i = \\alpha \\frac{\\epsilon^{ijk} E_j B_k}{B^2} -\\beta^i. $$ \n",
+    "We will now build the initial velocity using equation 152 in [this paper,](https://arxiv.org/pdf/1310.3274v2.pdf) cited in the original `GiRaFFE` code: $$ v^i = \\alpha \\frac{\\epsilon^{ijk} E_j B_k}{B^2} -\\beta^i. $$ \n",
     "However, our code needs the Valencia 3-velocity while this expression is for the drift velocity. So, we will need to transform it to the Valencia 3-velocity using the rule $\\bar{v}^i = \\frac{1}{\\alpha} \\left(v^i +\\beta^i \\right)$.\n",
     "Thus, $$\\bar{v}^i = \\frac{\\epsilon^{ijk} E_j B_k}{B^2}$$"
    ]
@@ -276,7 +276,7 @@
     "## Step 4.a: Code Validation against `GiRaFFEfood_HO.GiRaFFEfood_HO` NRPy+ module  \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation1}$$\n",
     "\n",
-    "Here, as a code validation check, we verify agreement in the SymPy expressions for the $\\texttt{GiRaFFE}$ Exact Wald initial data equations  we intend to use between\n",
+    "Here, as a code validation check, we verify agreement in the SymPy expressions for the `GiRaFFE` Exact Wald initial data equations  we intend to use between\n",
     "1. this tutorial and \n",
     "2. the NRPy+ [GiRaFFEfood_HO.GiRaFFEfood_HO_Exact_Wald](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO_Exact_Wald.py) module.\n"
    ]
@@ -290,21 +290,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vvv Ignore the minor warnings below. vvv\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::M_SQRT1_2\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::xmin\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::xmax\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::ymin\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::ymax\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::zmin\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter reference_metric::zmax\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO::IDchoice\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO::M\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO::M_PI\n",
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO::KerrSchild_radial_shift\n",
-      "^^^ Ignore the minor warnings above. ^^^\n",
-      "\n",
       "Consistency check between GiRaFFEfood_HO tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
       "ValenciavU[0] - gfho.ValenciavU[0] = 0\n",
       "AD[0] - gfho.AD[0] = 0\n",
@@ -320,19 +305,15 @@
     "#   twice will spawn an error.\n",
     "gri.glb_gridfcs_list = []\n",
     "\n",
-    "print(\"vvv Ignore the minor warnings below. vvv\")\n",
-    "\n",
     "import GiRaFFEfood_HO.GiRaFFEfood_HO_Exact_Wald as gfho\n",
     "gfho.GiRaFFEfood_HO_Exact_Wald()\n",
-    "\n",
-    "print(\"^^^ Ignore the minor warnings above. ^^^\\n\")\n",
     "\n",
     "print(\"Consistency check between GiRaFFEfood_HO tutorial and NRPy+ module: ALL SHOULD BE ZERO.\")\n",
     "\n",
     "for i in range(DIM):\n",
     "\n",
     "    print(\"ValenciavU[\"+str(i)+\"] - gfho.ValenciavU[\"+str(i)+\"] = \" + str(ValenciavU[i] - gfho.ValenciavU[i]))\n",
-    "    print(\"AD[\"+str(i)+\"] - gfho.AD[\"+str(i)+\"] = \" + str(AD[i] - gfho.AD[i]))\n"
+    "    print(\"AD[\"+str(i)+\"] - gfho.AD[\"+str(i)+\"] = \" + str(AD[i] - gfho.AD[i]))"
    ]
   },
   {
@@ -365,7 +346,7 @@
     "        B2 += gammaDD[i][j] * BU[i] * BU[j]\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
-    "        StildeD[i] += gammaDD[i][j] * (ValenciavU[j])*sp.sqrt(gammadet)*B2/4/M_PI\n"
+    "        StildeD[i] += gammaDD[i][j] * (ValenciavU[j])*sp.sqrt(gammadet)*B2/4/M_PI"
    ]
   },
   {
@@ -377,7 +358,7 @@
     "## Step 5.a: Code Validation against `GiRaFFEfood_HO.GiRaFFEfood_HO` NRPy+ module \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation2}$$\n",
     "\n",
-    "Here, as a code validation check, we verify agreement in the SymPy expressions for the $\\texttt{GiRaFFE}$ Exact Wald initial data equations  we intend to use between\n",
+    "Here, as a code validation check, we verify agreement in the SymPy expressions for the `GiRaFFE` Exact Wald initial data equations  we intend to use between\n",
     "1. this tutorial and \n",
     "2. the NRPy+ [GiRaFFEfood_HO.GiRaFFEfood_HO_Exact_Wald](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO_Exact_Wald.py) module.\n"
    ]
@@ -391,9 +372,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vvv Ignore the minor warnings below. vvv\n",
-      "^^^ Ignore the minor warnings above. ^^^\n",
-      "\n",
       "Consistency check between GiRaFFEfood_HO tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
       "StildeD[0] - gfho.StildeD[0] = 0\n",
       "StildeD[1] - gfho.StildeD[1] = 0\n",
@@ -406,12 +384,8 @@
     "#   twice will spawn an error.\n",
     "gri.glb_gridfcs_list = []\n",
     "\n",
-    "print(\"vvv Ignore the minor warnings below. vvv\")\n",
-    "\n",
     "#import GiRaFFEfood_HO.GiRaFFEfood_HO as gfho\n",
     "gfho.GiRaFFEfood_HO_ID_converter()\n",
-    "\n",
-    "print(\"^^^ Ignore the minor warnings above. ^^^\\n\")\n",
     "\n",
     "print(\"Consistency check between GiRaFFEfood_HO tutorial and NRPy+ module: ALL SHOULD BE ZERO.\")\n",
     "\n",
@@ -442,7 +416,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-GiRaFFEfood_HO_Exact_Wald.ipynb to latex\n",
-      "[NbConvertApp] Writing 51272 bytes to Tutorial-GiRaFFEfood_HO_Exact_Wald.tex\n",
+      "[NbConvertApp] Writing 55581 bytes to Tutorial-GiRaFFEfood_HO_Exact_Wald.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
