--- a/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb
@@ -83,15 +83,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "initialize_Cparam() minor warning: Did nothing; already initialized parameter ScalarWaveCurvilinear.ScalarWaveCurvilinear_RHSs::wavespeed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step P1: Import needed NRPy+ core modules:\n",
     "import NRPy_param_funcs as par\n",
@@ -280,7 +272,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ScalarWaveCurvilinear/curvilinear_boundary_conditions.h\n"
+      "Writing ScalarWaveCurvilinear/curvilinear_boundary_conditions.h\n"
      ]
     }
    ],
@@ -478,7 +470,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting ScalarWaveCurvilinear/ScalarWaveCurvilinear_Playground.c\n"
+      "Writing ScalarWaveCurvilinear/ScalarWaveCurvilinear_Playground.c\n"
      ]
     }
    ],
@@ -774,13 +766,13 @@
      "output_type": "stream",
      "text": [
       "Compiling executable...\n",
-      "Executing `gcc -Ofast -fopenmp -march=native ScalarWaveCurvilinear/ScalarWaveCurvilinear_Playground.c -o ScalarWaveCurvilinear_Playground -lm`...\n",
-      "Finished executing in 0.620832920074 seconds.\n",
+      "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops ScalarWaveCurvilinear/ScalarWaveCurvilinear_Playground.c -o ScalarWaveCurvilinear_Playground -lm`...\n",
+      "Finished executing in 1.01695299149 seconds.\n",
       "Finished compilation.\n",
       "Executing `taskset -c 0,1,2,3 ./ScalarWaveCurvilinear_Playground 16  8 16`...\n",
-      "Finished executing in 0.420562982559 seconds.\n",
+      "Finished executing in 0.818956136703 seconds.\n",
       "Executing `taskset -c 0,1,2,3 ./ScalarWaveCurvilinear_Playground 24 12 24`...\n",
-      "Finished executing in 3.02702903748 seconds.\n"
+      "Finished executing in 4.03610801697 seconds.\n"
      ]
     }
    ],
@@ -927,7 +919,7 @@
       "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb to latex\n",
       "[NbConvertApp] Support files will be in Tutorial-Start_to_Finish-ScalarWaveCurvilinear_files/\n",
       "[NbConvertApp] Making directory Tutorial-Start_to_Finish-ScalarWaveCurvilinear_files\n",
-      "[NbConvertApp] Writing 95817 bytes to Tutorial-Start_to_Finish-ScalarWaveCurvilinear.tex\n",
+      "[NbConvertApp] Writing 95592 bytes to Tutorial-Start_to_Finish-ScalarWaveCurvilinear.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
