NRPy+ main page: Add unit testing how-to guide.

--- a/Tutorial-UnitTesting.ipynb
+++ b/Tutorial-UnitTesting.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Unit Testing\n",
+    "# Adding Unit Tests to the NRPy+ Unit Testing Infrastructure\n",
     "\n",
     "## Author: Kevin Lituchy\n",
     "\n",
