--- a/Tutorial-SEOBNR_Documentation.ipynb
+++ b/Tutorial-SEOBNR_Documentation.ipynb
@@ -3288,7 +3288,19 @@
     "        &= 1 + \\eta \\left[ \\Delta_{0} + \\log \\left( 1 + \\Delta_{1} u + \\Delta_{2} u^{2} + \\Delta_{3} u^{3} + \\Delta_{4} u^{4} \\right) \\right].\n",
     "\\end{align*}\n",
     "\n",
-    "We define $u$ in [this cell](#u), $\\eta$ in [this cell](#eta), and the calibration coefficients $\\Delta_{i}$, $i \\in \\left\\{0, 1, 2, 3, 4\\right\\}$, in [this cell](#calib_coeffs). <font color='red'>Note that in the LALSuite code (see LALSimIMRSpinEOBHamiltonianPrec.c line 274) there are two more terms; whence do they originate?  Further note: as coded in LALSuite, there exits an absolute value inside the logarithm.  Why?  Is it really safe and/or necessary?</font>"
+    "In [Taracchini, Buonanno, et. al (2014)](https://arxiv.org/pdf/1311.2544.pdf) Equation (2), an additional term is added but is only defined in the LIGO document [Changes to SEOBNRv1](https://dcc.ligo.org/DocDB/0114/T1400476/003/ChangesToSEOBNRv1.pdf) (see the subsection \"New 4PN term in the radial potential $\\Delta_{u}$\" under the \"Hamiltonian\" section).  We then have\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "    \\Delta_u\\ {\\rm calibration\\ term} = 1 + \\eta \\left[ \\Delta_{0} + \\log \\left( 1 + \\Delta_{1} u + \\Delta_{2} u^{2} + \\Delta_{3} u^{3} + \\Delta_{4} u^{4} + \\Delta_{5} u^{5} \\right) \\right].\n",
+    "\\end{equation*}\n",
+    "\n",
+    "In the LALSuite code itself (see LALSimIMRSpinEOBHamiltonianPrec.c line 274 on Git commit a70b43d), there's one more term, for which documentation is elusive.  That bring us to\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "    \\Delta_u\\ {\\rm calibration\\ term} = 1 + \\eta \\left[ \\Delta_{0} + \\log \\left( 1 + \\Delta_{1} u + \\Delta_{2} u^{2} + \\Delta_{3} u^{3} + \\Delta_{4} u^{4} + \\Delta_{5} u^{5} + \\Delta_{5\\ell} u^{5} \\ln\\left(u\\right) \\right) \\right].\n",
+    "\\end{equation*}\n",
+    "\n",
+    "We define $u$ in [this cell](#u), $\\eta$ in [this cell](#eta), and the calibration coefficients $\\Delta_{i}$, $i \\in \\left\\{0, 1, 2, 3, 4\\right\\}$, in [this cell](#calib_coeffs). <font color='red'>We need documentation for the final term.  As coded in LALSuite, there exits an absolute value inside the logarithm.  Why?  Is it really safe and/or necessary?</font>"
    ]
   },
   {
@@ -3307,7 +3319,8 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
-    "Deltaucalib = 1 + eta*(Delta0 + sp.log(1 + Delta1*u + Delta2*u*u + Delta3*u*u*u + Delta4*u*u*u*u))"
+    "Deltaucalib = 1 + eta*(Delta0 + sp.log(1 + Delta1*u + Delta2*u*u + Delta3*u*u*u + Delta4*u*u*u*u + Delta5*u*u*u*u*u\n",
+    "                                       + Delta5l*u*u*u*u*u*sp.log(u)))"
    ]
   },
   {
@@ -3327,7 +3340,11 @@
     "    \\Delta_{2} &= \\frac{1}{2} \\Delta_{1} \\left( -4 \\eta K + \\Delta_{1} + 4 \\right) - \\frac{ a^{2} }{ M^{2} } \\left( \\eta K - 1 \\right)^{2} \\Delta_{0}\\\\\n",
     "    \\Delta_{3} &= \\frac{1}{3} \\left[ -\\Delta_{1}^{3} + 3 \\left( \\eta K - 1 \\right) \\Delta_{1}^{2} + 3 \\Delta_{2} \\Delta_{1} - 6 \\left( \\eta K - 1 \\right) \\left( -\\eta K + \\Delta_{2} + 1 \\right) - 3 \\frac{ a^{2} }{ M^{2} } \\left( \\eta K - 1 \\right)^{2} \\Delta_{1} \\right] \\\\\n",
     "    \\Delta_{4} &= \\frac{1}{12} \\left\\{ 6 \\frac{ a^{2} }{ M^{2} } \\left( \\Delta_{1}^{2} - 2 \\Delta_{2} \\right) \\left( \\eta K - 1 \\right)^{2} + 3 \\Delta_{1}^{4} - 8 \\left( \\eta K - 1 \\right) \\Delta_{1}^{3} - 12 \\Delta_{2} \\Delta_{1}^{2} + 12 \\left[ 2 \\left( \\eta K - 1 \\right) \\Delta_{2} + \\Delta_{3} \\right] \\Delta_{1} \\right.\\\\\n",
-    "        &\\left.\\ \\ \\ \\ \\ + 12 \\left( \\frac{94}{3} - \\frac{41}{32} \\pi^{2} \\right) \\left( \\eta K - 1 \\right)^{2} + 6 \\left[ \\Delta_{2}^{2} - 4 \\Delta_{3} \\left( \\eta K - 1 \\right) \\right] \\right\\}\n",
+    "        &\\left.\\ \\ \\ \\ \\ + 12 \\left( \\frac{94}{3} - \\frac{41}{32} \\pi^{2} \\right) \\left( \\eta K - 1 \\right)^{2} + 6 \\left[ \\Delta_{2}^{2} - 4 \\Delta_{3} \\left( \\eta K - 1 \\right) \\right] \\right\\} \\\\\n",
+    "    \\Delta_{5} &= \\left( \\eta K - 1 \\right)^{2} \\left\\{ \\left( -\\frac{4237}{60} + \\frac{128}{5}\\gamma + \\frac{2275}{512} \\pi^{2} - \\frac{1}{3} a^{2} \\left\\{ \\Delta_{1}^{3} - 3 \\Delta_{1} \\Delta_{2} + 3 \\Delta_{3} \\right\\} \\right.\\right. \\\\\n",
+    "        &\\ \\ \\ \\ \\ - \\frac{ \\Delta_{1}^{5} - 5 \\Delta_{1}^{3} \\Delta_{2} + 5 \\Delta_{1} \\Delta_{2}^{2} + 5 \\Delta_{1}^{2} \\Delta_{3} - 5 \\Delta_{2} \\Delta_{3} - 5 \\Delta_{1} \\Delta_{4} }{ 5 \\left( \\eta K - 1 \\right)^{2} } \\\\\n",
+    "         &\\left.\\left.\\ \\ \\ \\ \\  + \\frac{ \\Delta_{1}^{4} - 4 \\Delta_{1}^{2}  \\Delta_{2} + 2 \\Delta_{2}^{2} + 4 \\Delta_{1} \\Delta_{3} - 4 \\Delta_{4} }{ 2\\left( \\eta K - 1 \\right) } + \\frac{256}{5} \\log(2) \\right) + \\frac{64}{5} \\log(u) \\right\\} \\\\\n",
+    "        \\Delta_{5\\ell} &= \\frac{64}{5} \\left( \\eta K - 1 \\right)^{2}.\n",
     "\\end{align*}\n",
     "\n",
     "We define $K$ in [this cell](#k), $\\eta$ in [this cell](#eta), $a$ in [this cell](#a), and $M$ in [this cell](#m), and a2M2inv in [this cell](#a2m2inv)."
@@ -3349,6 +3366,13 @@
    "source": [
     "%%writefile -a SEOBNR/Hamiltonian-Hreal_on_top.txt\n",
     "\n",
+    "Delta5l = etaKminus1**2*64./5.\n",
+    "Delta5 = etaKminus1**2*((sp.Rational(-4237,60) + sp.Rational(128,5)*gamma + sp.Rational(2275,512)*sp.pi**2\n",
+    "                         - sp.Rational(1,3)*a**2*(Delta1**3 - 3*Delta1*Delta2 + 3*Delta3)\n",
+    "                         - (Delta1**5 - 5*Delta1**3*Delta2 + 5*Delta1*Delta2**2 + 5*Delta1**2*Delta3 - 5*Delta2*Delta3\n",
+    "                            - 5*Delta1*Delta4)/(5*etaKminus1**2)\n",
+    "                         + (Delta1**4 - 4*Delta1**2*Delta2 + 2*Delta2**2 + 4*Delta1*Delta3 - 4*Delta4)/(2*etaKminus1)\n",
+    "                        + sp.Rational(256,5)*sp.log(2)) + sp.rational(64,5)*sp.log(u))\n",
     "Delta4 = sp.Rational(1,12)*(6*a2M2inv*(Delta1**2 - 2*Delta2)*etaKminus1**2 + 3*Delta1**4 - 8*etaKminus1*Delta1**3\n",
     "                           -12*Delta2*Delta1**2 + 12*(2*etaKminus1*Delta2 + Delta3)*Delta1\n",
     "                           + 12*(sp.Rational(94,3) - sp.Rational(41,32)*pi**2)*etaKminus1**2\n",
@@ -4324,7 +4348,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-SEOBNR_Documentation.ipynb to latex\n",
-      "[NbConvertApp] Writing 173323 bytes to Tutorial-SEOBNR_Documentation.tex\n",
+      "[NbConvertApp] Writing 175931 bytes to Tutorial-SEOBNR_Documentation.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
