Expanding on the documentation of the PPM algorithm.

--- a/Tutorial-GiRaFFE_HO_Ccode_library-PPM.ipynb
+++ b/Tutorial-GiRaFFE_HO_Ccode_library-PPM.ipynb
@@ -606,7 +606,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is one of the main functions responsible for reconstruction. It is based on Colella & Woodward PPM in the case where pressure and density $P = \\rho = 0$."
+    "This is one of the main functions responsible for reconstruction. It is based on Colella & Woodward PPM in the case where pressure and density $P = \\rho = 0$.\n",
+    "\n",
+    "We start by defining the values of `MINUS2`...`PLUS2` as $\\{0,...,4\\}$ for the sake of convenience later on; we also define `MAXNUMINDICES` as 5 so we can easily loop over the above. We include `loop_defines_reconstruction.h` for some macros that will allow us to conveniently write common loops that we will use (this will be imminently replaced with the NRPy+ standard `LOOP_REGION` **(Actually, might be better to directly port these)**) and give the function prototypes for our slope limiter, `slope_limit()`, and our monotization algorithm, `monotonize()`."
    ]
   },
   {
@@ -646,6 +648,25 @@
     "\n",
     "static inline CCTK_REAL slope_limit(const CCTK_REAL dU,const CCTK_REAL dUp1);\n",
     "static inline void monotonize(const CCTK_REAL U,CCTK_REAL &Ur,CCTK_REAL &Ul);\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, we start the function definition for the main function for our reconstruction, `reconstruct_set_of_prims_PPM_GRFFE()`. Among its parameters are the arrays that define the grid (that will need to be replaced with NRPy+ equivalents), a flux direction, the integer array specifying which primitives to reconstruct (as well as the number of primitives to reconstruct), the input structure `in_prims`, the output structures `out_prims_r` and `out_prims_l`, and a temporary value **(What does this do? I can't find a declaration for it.)**\n",
+    "\n",
+    "We then check the number of ghostzones and error out if there are too few - this method requires three. Note the `for` loop here; it continues through the next two cells as well, looping over each primitive we will reconstruct in the chosen direction. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile -a $outdir/reconstruct_set_of_prims_PPM_GRFFE.C\n",
     "\n",
     "static void reconstruct_set_of_prims_PPM_GRFFE(const cGH *cctkGH,const int *cctk_lsh,const int flux_dirn,const int num_prims_to_reconstruct,const int *which_prims_to_reconstruct,\n",
     "                                               const gf_and_gz_struct *in_prims,gf_and_gz_struct *out_prims_r,gf_and_gz_struct *out_prims_l, CCTK_REAL *temporary) {\n",
@@ -662,7 +683,38 @@
     "\t\t  in_prims[whichvar].gz_lo[1],in_prims[whichvar].gz_lo[2],in_prims[whichvar].gz_lo[3],\n",
     "\t\t  in_prims[whichvar].gz_hi[1],in_prims[whichvar].gz_hi[2],in_prims[whichvar].gz_hi[3],flux_dirn);\n",
     "    }\n",
-    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In Loop 1, we will interpolate the face values at the left and right interfaces, `Ur` and `Ul`. This is done on a point-by-point basis as defined by the `LOOP_DEFINE`. \n",
+    "\n",
+    "After reading in the relevant values from memory, we calculate thesimple `dU`:\n",
+    "\\begin{align}\n",
+    "dU_{-1} &= U_{-1} - U_{-2} \\\\\n",
+    "dU_{+0} &= U_{+0} - U_{-1} \\\\\n",
+    "dU_{+1} &= U_{+1} - U_{+0} \\\\\n",
+    "dU_{+2} &= U_{+2} - U_{+1}. \\\\\n",
+    "\\end{align}\n",
+    "From that, we compute the slope-limited `slope_lim_dU`, or $\\nabla U$. Then, we compute the face values:\n",
+    "\\begin{align}\n",
+    "U_r &= \\frac{1}{2} \\left( U_{+1} + U_{+0} \\right) + \\frac{1}{6} \\left( \\nabla U_{+0} - \\nabla U_{+1} \\right) \\\\\n",
+    "U_l &= \\frac{1}{2} \\left( U_{+0} + U_{-1} \\right) + \\frac{1}{6} \\left( \\nabla U_{-1} - \\nabla U_{+0} \\right) \\\\\n",
+    "\\end{align}\n",
+    "Finally, we write the values to memory in the output structures."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile -a $outdir/reconstruct_set_of_prims_PPM_GRFFE.C\n",
+    "\n",
     "    // *** LOOP 1: Interpolate to Ur and Ul, which are face values ***\n",
     "    //  You will find that Ur depends on U at MINUS1,PLUS0, PLUS1,PLUS2, and\n",
     "    //                     Ul depends on U at MINUS2,MINUS1,PLUS0,PLUS1.\n",
@@ -708,7 +760,21 @@
     "      //    and left face values to {vxl,vyl,vzl,Bxl,Byl,Bzl}\n",
     "      out_prims_r[whichvar].gf[index_arr[flux_dirn][PLUS0]] = Ur[whichvar][PLUS0];\n",
     "      out_prims_l[whichvar].gf[index_arr[flux_dirn][PLUS0]] = Ul[whichvar][PLUS0];      \n",
-    "    }\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile -a $outdir/reconstruct_set_of_prims_PPM_GRFFE.C\n",
     "\n",
     "    // *** LOOP 2 (REMOVED): STEEPEN RHOB. RHOB DOES NOT EXIST IN GRFFE EQUATIONS ***\n",
     "  }\n",
@@ -742,8 +808,20 @@
     "    // Note: ftilde=0 in GRFFE. Ul depends on ftilde, which depends on points of U between MINUS2 and PLUS2\n",
     "    out_prims_l[whichvar].gz_lo[flux_dirn]+=2;\n",
     "    out_prims_l[whichvar].gz_hi[flux_dirn]+=2;\n",
-    "  }\n",
-    "\n",
+    "  }\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "  // *** LOOP 4: SHIFT Ur AND Ul ***\n",
     "  /* Currently face values are set so that\n",
     "   *      a) Ur(i) represents U(i+1/2), and\n",
@@ -789,7 +867,7 @@
     "$$ MC(a,b) = \\left \\{ \\begin{array}{ll} \n",
     "             0 & {\\rm if} ab \\leq 0 \\\\\n",
     "             {\\rm sign}(a) \\min(2|a|,2|b|, |a+b|/2) & {\\rm otherwise.}  \n",
-    "             \\end{array} \\right. ,\n",
+    "             \\end{array} \\right.\n",
     "             $$\n",
     "             \n",
     "             "
@@ -823,7 +901,23 @@
     "    return sign_delta_m_U*MIN(fabs(delta_m_U),MIN(SLOPE_LIMITER_COEFF*fabs(dUp1),SLOPE_LIMITER_COEFF*fabs(dU)));\n",
     "  }\n",
     "  return 0.0;\n",
-    "}\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next function monotonizes the slopes. We want the slope to be monotonic in a cell in order to reduce the impact of the Gibbs phenomenon. So, we consider three values in the cell: at the center, `U`; on the right interface, `Ur`; and on the left interface, `Ul`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile -a $outdir/reconstruct_set_of_prims_PPM_GRFFE.C\n",
     "\n",
     "static inline void monotonize(const CCTK_REAL U,CCTK_REAL &Ur,CCTK_REAL &Ul) {\n",
     "  const CCTK_REAL dU = Ur - Ul;\n",
