--- a/Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt.ipynb
+++ b/Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt.ipynb
@@ -239,15 +239,9 @@
      "output_type": "stream",
      "text": [
       "Wrote to file \"ScalarWaveCurvilinear_Playground_Ccodes/boundary_conditions/parity_conditions_symbolic_dot_products.h\"\n",
-      "hey 2.b\n",
       "Evolved gridfunction \"uu\" has parity type 0.\n",
       "Evolved gridfunction \"vv\" has parity type 0.\n",
-      "hey 2.c\n",
-      "hey 3\n",
-      "hey 4\n",
-      "Wrote to file \"ScalarWaveCurvilinear_Playground_Ccodes/boundary_conditions/EigenCoord_Cart_to_xx.h\"\n",
-      "hey 5.b\n",
-      "hey 6 done\n"
+      "Wrote to file \"ScalarWaveCurvilinear_Playground_Ccodes/boundary_conditions/EigenCoord_Cart_to_xx.h\"\n"
      ]
     }
    ],
@@ -648,7 +642,7 @@
     "                if(sqrt(xCart[0]*xCart[0] + xCart[1]*xCart[1] + xCart[2]*xCart[2]) < domain_size*0.3) {\n",
     "                    REAL uu_exact,vv_exact; exact_solution_single_point(xCart[0],xCart[1],xCart[2],&params, \n",
     "                                                                        &uu_exact,&vv_exact);\n",
-    "                    double num   = (double)y_n_gfs[IDX4S(0,i0,i1,i2)];\n",
+    "                    double num   = (double)y_n_gfs[IDX4S(UUGF,i0,i1,i2)];\n",
     "                    double exact = (double)uu_exact;\n",
     "                    integral += (num - exact)*(num - exact);\n",
     "                    numpts   += 1.0;\n",
@@ -687,14 +681,14 @@
      "text": [
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops ScalarWaveCurvilinear_Playground_Ccodes/ScalarWaveCurvilinear_Playground-SIMD.c -o ScalarWaveCurvilinear_Playground-SIMD -lm`...\n",
-      "Finished executing in 1.82912302017 seconds.\n",
+      "Finished executing in 1.82596111298 seconds.\n",
       "Finished compilation.\n",
       "Executing `taskset -c 0,1,2,3,4,5 ./ScalarWaveCurvilinear_Playground-SIMD 16  8 16`...\n",
-      "Finished executing in 0.23056101799 seconds.\n",
+      "Finished executing in 0.220547914505 seconds.\n",
       "Executing `taskset -c 0,1,2,3,4,5 ./ScalarWaveCurvilinear_Playground-SIMD 24 12 24`...\n",
-      "Finished executing in 0.829140901566 seconds.\n",
+      "Finished executing in 0.827330112457 seconds.\n",
       "Executing `taskset -c 0,1,2,3,4,5 ./ScalarWaveCurvilinear_Playground-SIMD 48 24 48`...\n",
-      "Finished executing in 19.7157349586 seconds.\n"
+      "Finished executing in 17.3087699413 seconds.\n"
      ]
     }
    ],
@@ -854,7 +848,7 @@
       "[NbConvertApp] Converting notebook Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt.ipynb to latex\n",
       "[NbConvertApp] Support files will be in Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt_files/\n",
       "[NbConvertApp] Making directory Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt_files\n",
-      "[NbConvertApp] Writing 90231 bytes to Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt.tex\n",
+      "[NbConvertApp] Writing 90097 bytes to Tutorial-Start_to_Finish-ScalarWaveCurvilinear-opt.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
