cmdline_helper: Add verbose option to Execute(), rename output bool to verbose in Execute_input_string()

--- a/Tutorial-cmdline_helper.ipynb
+++ b/Tutorial-cmdline_helper.ipynb
@@ -62,7 +62,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing cmdline_helper-validation.py\n"
+      "Overwriting cmdline_helper-validation.py\n"
      ]
     }
    ],
@@ -282,7 +282,7 @@
     "#            if available. Calls Execute_input_string() to\n",
     "#            redirect output from stdout & stderr to desired\n",
     "#            destinations.\n",
-    "def Execute(executable, executable_output_arguments=\"\", file_to_redirect_stdout=os.devnull):\n",
+    "def Execute(executable, executable_output_arguments=\"\", file_to_redirect_stdout=os.devnull,verbose=True):\n",
     "    # Step 1: Delete old version of executable file\n",
     "    if file_to_redirect_stdout != os.devnull:\n",
     "        delete_existing_files(file_to_redirect_stdout)\n",
@@ -318,7 +318,7 @@
     "    execute_string += execute_prefix+executable+\" \"+executable_output_arguments\n",
     "\n",
     "    # Step 3: Execute the desired executable\n",
-    "    Execute_input_string(execute_string, file_to_redirect_stdout)"
+    "    Execute_input_string(execute_string, file_to_redirect_stdout,verbose)"
    ]
   },
   {
@@ -356,10 +356,9 @@
     "\n",
     "# Execute_input_string(): Executes an input string and redirects \n",
     "#            output from stdout & stderr to desired destinations.\n",
-    "def Execute_input_string(input_string, file_to_redirect_stdout=os.devnull, output=True):\n",
+    "def Execute_input_string(input_string, file_to_redirect_stdout=os.devnull, verbose=True):\n",
     "\n",
-    "    if output:\n",
-    "#         print('input_string: ' + repr(input_string))\n",
+    "    if verbose:\n",
     "        print(\"Executing `\"+input_string+\"`...\")\n",
     "    start = time.time()\n",
     "    # https://docs.python.org/3/library/subprocess.html\n",
@@ -368,8 +367,6 @@
     "    else:\n",
     "        args = input_string\n",
     "\n",
-    "    # if output:\n",
-    "    #     print('args: ' + repr(args))\n",
     "    # https://stackoverflow.com/questions/18421757/live-output-from-subprocess-command\n",
     "    filename = \"tmp.txt\"\n",
     "    with io.open(filename, 'wb') as writer, io.open(filename, 'rb', 1) as reader, io.open(file_to_redirect_stdout, 'w') as rdirect:\n",
@@ -381,17 +378,8 @@
     "        # Read the remaining\n",
     "        sys.stdout.write(reader.read().decode('utf-8'))\n",
     "    delete_existing_files(filename)\n",
-    "# Old Python 2 version (broken for stdout redirect): if (sys.version_info < (3, 0)):\n",
-    "#     else:\n",
-    "#         with open(os.devnull, 'w') as f:  # replace 'w' with 'wb' for Python 3<-- Doesn't work!\n",
-    "#             process = subprocess.Popen(args, stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
-    "#             for c in iter(lambda: process.stderr.read(1), ''):  # replace '' with b'' for Python 3<-- Doesn't work!\n",
-    "#                 sys.stdout.write(c)\n",
-    "#                 f.write(c)\n",
-    "#             for c in iter(lambda: process.stdout.read(1), ''):  # replace '' with b'' for Python 3<-- Doesn't work!\n",
-    "#                 sys.stdout.write(f.read())\n",
     "    end = time.time()\n",
-    "    if output:\n",
+    "    if verbose:\n",
     "        print(\"Finished executing in \"+str(end-start)+\" seconds.\")"
    ]
   },
@@ -518,7 +506,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-cmdline_helper.ipynb to latex\n",
-      "[NbConvertApp] Writing 49868 bytes to Tutorial-cmdline_helper.tex\n",
+      "[NbConvertApp] Writing 50594 bytes to Tutorial-cmdline_helper.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
